--- a/index.html
+++ b/index.html
@@ -1,2 +1,33 @@
-<h1>Nandeesh G</h1>
-<h2>an</h2>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Nandeesh G</title>
+    <style>
+        .container {
+            display: grid;
+            grid-template-columns: auto 1fr; /* 2 columns: image and text */
+            gap: 50px;
+            align-items: center; /* vertically align items */
+        }
+
+        .text {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        h1, h2 {
+            margin: 0;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <img src="img/nandeesh.jpg" width="200" height="300" alt="Nandeesh G">
+        <div class="text">
+            <h1>Nandeesh G</h1>
+            <h2>7305504121</h2>
+        </div>
+    </div>
+</body>
+</html>
