--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <style>
         .container {
             display: grid;
-            grid-template-columns: auto 1fr; /* 2 columns: image and text */
+            grid-template-columns: auto 1fr;
             gap: 50px;
-            align-items: center; /* vertically align items */
+            align-items: center;
         }
         .profile{
-            grid-row: 1 ; /* Image spans both rows */
+            grid-row: 1 ; 
 
         }
         .head {
@@ -28,7 +28,7 @@
             <h1>Nandeesh G</h1>
            <h2>Ph no. +91 7305504121</h2>
         </div> 
-        
     </div>
+    <h3>objective</h3>
 </body>
 </html>
