--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
            <h2>Ph no. +91 7305504121</h2>
         </div> 
     </div>
-    <h3>objective</h3>
+    <b><h3 >objective</h3></b>
+    <h3>
+        To work in a challenging environment that encourages continuous learning and creativity, where I can effectively contribute my skills and knowledge as a software professional, thereby enhancing my career growth along with the organization.
+    </h3>
+   <b> <h3>skills</h3></b>
+    <ol>
+        <li>html</li>
+        <a href="css.html"><li>Css</li></a>
+    </ol>
 </body>
 </html>
