little changes made

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     </div>
     <b><h3 >objective</h3></b>
     <h3>
-        To work in a challenging environment that encourages continuous learning and creativity, where I can effectively contribute my skills and knowledge as a software professional, thereby enhancing my career growth along with the organization.
-    </h3>
+        Motivated and detail-oriented computer science student seeking a full stack development internship to gain practical experience, contribute to real-world projects, and grow within a collaborative and learning-focused environment.    </h3>
    <b> <h3>skills</h3></b>
     <ol>
         <li>html</li>
