--- a/css.html
+++ b/css.html
@@ -24,7 +24,7 @@
         display: flex;
         gap:10px;
         flex-wrap: wrap;
-        justify-content: flex-start;
+        justify-content: center;
     }
     .flex2{
         border: 10px solid black;
@@ -34,6 +34,7 @@
         justify-content: flex-start;
         align-items: flex-start;
         flex-wrap: wrap;
+        max-width: 100%;
     }
     * {
   box-sizing: border-box;
