--- a/css.html
+++ b/css.html
@@ -2,23 +2,29 @@
 <html style="margin:0 ;">
 <head>
 <style>
-    .flex{
-        border: 10px solid black;
+    .cont{
+        height: 540px;
+        width: 350px;
         display: flex;
-        min-height: 500px;
+    flex-direction: column;
+    justify-content: space-between; 
+    align-items: center;
+
+    }
+    
+    .flex{
         gap: 10px;
         align-items: center;
         justify-content: center;
-        flex-wrap: wrap;
 
     }
     .box{
-        height: 100px;
-        width: 100px;
+        height: 50px;
+        width: 50px;
         background-color:green;
     }
     .code{
-        font-size: 20pt;
+        font-size: 1em;
     }
     body{
         display: flex;
@@ -27,37 +33,52 @@
         justify-content: center;
     }
     .flex2{
-        border: 10px solid black;
-        display: flex;
-        min-height: 500px;
         gap: 10px;
         justify-content: flex-start;
         align-items: flex-start;
-        flex-wrap: wrap;
-        max-width: 100%;
     }
-    * {
-  box-sizing: border-box;
-}
+    .container{
+        border: 10px solid black;
+        display: flex;
+        height: 300px;
+        width: 300px;
+    }
+    .container2{
+        height: 200px;
+        width: 200px;
+    }
+    .flex3{
+        justify-content: flex-end;
+        gap: 10px;
+        align-items: flex-end;
+    }
+    .flex4{
+        flex-wrap: wrap;
+        gap: 10px;
+        justify-content: flex-start;
+    }
+    .flex5{
+        flex-direction: column-reverse;
+        gap: 10px;
+        justify-content: center;
+    }
+
 
 </style>
     <title>css</title>
 </head>
 <body>
-    <div>
+    <div class="cont">
     <h1>flex</h1>
     <pre  class="code">
     .flex{
-        border: 10px solid black;
         display: flex;
-        min-height: 500px;
         gap: 10px;
         align-items: center;
         justify-content: center;
-
     }
     </pre>
-    <div class="flex">
+    <div class="flex container">
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
@@ -65,21 +86,76 @@
         <div class="box"></div>
     </div>
     </div>
-    <div>
-        <h1></h1>
+    <div class="cont">
+        <h1>flex-start</h1>
         <pre class="code">
-        .flex2{
-            gap: 20px;
-            justify-content: start;
-        }
+    .flex2{
+        display: flex;
+        gap: 10px;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
         </pre>
-        <div class="flex2">
+        <div class="flex2 container">
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
     </div>
+    </div>
+    <div class="cont">
+        <h1>flex-end</h1>
+        <pre class="code">
+    .flex3{
+        justify-content: flex-end;
+        gap: 10px;
+        align-items: flex-end;
+    }
+        </pre>
+        <div class="flex3 container">
+            <div class="box">1</div>
+            <div class="box">2</div>
+            <div class="box">3</div>
+            <div class="box">4</div>
+            <div class="box">5</div>
+        </div>
+    </div>
+    <div class="cont">
+        <h1>flex-wrap</h1>
+        <pre class="code">
+    .flex4{
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+        </pre>
+        <div class="flex4 container container2">
+            <div class="box">1</div>
+            <div class="box">2</div>
+            <div class="box">3</div>
+            <div class="box">4</div>
+            <div class="box">5</div>
+        </div>
+    </div>
+    <div class="cont">
+        <h1>flex-direction</h1>
+        <pre class="code">
+    .flex5{
+        flex-direction: column-reverse;
+        gap: 10px;
+        justify-content: center;
+    }
+        </pre>
+        <div class="flex5 container">
+            <div class="box">1</div>
+            <div class="box">2</div>
+            <div class="box">3</div>
+            <div class="box">4</div>
+            <div class="box">5</div>
+        </div>
+        <p>
+            similarly it has row, row-reverse, column
+        </p>
     </div>
 
 </body>
