--- a/css.html
+++ b/css.html
@@ -1,70 +1,7 @@
 <!DOCTYPE html>
 <html style="margin:0 ;">
 <head>
-<style>
-    .cont{
-        height: 540px;
-        width: 350px;
-        display: flex;
-    flex-direction: column;
-    justify-content: space-between; 
-    align-items: center;
-
-    }
-    
-    .flex{
-        gap: 10px;
-        align-items: center;
-        justify-content: center;
-
-    }
-    .box{
-        height: 50px;
-        width: 50px;
-        background-color:green;
-    }
-    .code{
-        font-size: 1em;
-    }
-    body{
-        display: flex;
-        gap:10px;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-    .flex2{
-        gap: 10px;
-        justify-content: flex-start;
-        align-items: flex-start;
-    }
-    .container{
-        border: 10px solid black;
-        display: flex;
-        height: 300px;
-        width: 300px;
-    }
-    .container2{
-        height: 200px;
-        width: 200px;
-    }
-    .flex3{
-        justify-content: flex-end;
-        gap: 10px;
-        align-items: flex-end;
-    }
-    .flex4{
-        flex-wrap: wrap;
-        gap: 10px;
-        justify-content: flex-start;
-    }
-    .flex5{
-        flex-direction: column-reverse;
-        gap: 10px;
-        justify-content: center;
-    }
-
-
-</style>
+<link rel="stylesheet" href="styles.css">
     <title>css</title>
 </head>
 <body>
