--- a/css.html
+++ b/css.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="margin:0 ;">
+<html>
 <head>
 <link rel="stylesheet" href="styles.css">
     <title>css</title>
@@ -73,6 +73,7 @@
             <div class="box">4</div>
             <div class="box">5</div>
         </div>
+        <p>similarly no-wrap value is also used</p>
     </div>
     <div class="cont">
         <h1>flex-direction</h1>
@@ -94,6 +95,64 @@
             similarly it has row, row-reverse, column
         </p>
     </div>
-
+    <div class="cont">
+        <h1>space-between</h1>
+        <pre class="code">
+.flex6{
+    display: flex;
+    gap: 10px;
+    justify-content: space-between;
+}
+        </pre>
+        <div class="flex6 container">
+            <div class="box">1</div>
+            <div class="box">2</div>
+            <div class="box">3</div>
+            <div class="box">4</div>
+            <div class="box">5</div>
+        </div>
+    </div>
+    <div class="cont">
+        <h1>space-around</h1>
+        <pre class="code">
+    .flex7{
+        display: flex;
+        gap: 10px;
+        justify-content: space-around;
+    }
+        </pre>
+        <div class="flex7 container">
+            <div class="box">1</div>
+            <div class="box">2</div>
+            <div class="box">3</div>
+            <div class="box">4</div>
+            <div class="box">5</div>
+        </div>
+        <p>similarly "space-evenly" were also used
+        </p>
+    </div>
+    <div class="cont">
+        <h1>align-content</h1>
+        <pre class="code">
+    .flex8{
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+        align-content: center;
+        justify-content: center;
+    }
+        </pre>
+        <div class="flex8 container">
+            <div class="box">1</div>
+            <div class="box">2</div>
+            <div class="box">3</div>
+            <div class="box">4</div>
+            <div class="box">5</div>
+            <div class="box">6</div>
+            <div class="box">7</div>
+            <div class="box">8</div>
+            <div class="box">9</div>
+        </div>
+    </div>
 </body>
 </html>
